--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,15 @@
-
-
-/* .logo { ``````````````````````````````````````````````Important``````````````````````````````
-  background: left / cover url('./images/background_img.jpg');
-  display: flex;
-  height: 120px;
-  align-items: center;
-  justify-content: center;
-  font:
-    bold calc(1em + 2 * (100vw - 120px) / 100) 'Dancing Script',
-    fantasy;
-  color: #ff0083;
-  text-shadow: #000 2px 2px 0.2rem;
-} */
-
-/* .container{
-  border: 1px solid grey;
-} */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+body{
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+}
+.wrapper{
+  border-top: 3px solid green;
+}
+.wrapper a{
+  text-decoration: none;
+  color: green;
+}
 
