--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@ body{
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
+    background-color: #387234 !important;
 }
+
 .wrapper{
   border-top: 3px solid green;
 }
@@ -12,4 +14,9 @@ body{
   text-decoration: none;
   color: green;
 }
+.home-page:hover {
+  font-size: 1.1rem;
+  color: black; /* Adjust the font size as needed */
+}
+
 
