website frontend update commit

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@ body{
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
-    background-color: #387234 !important;
+    background-color: #114817 !important;
+    /* background-color:  #fff !important ; */
 }
 
 .wrapper{
