--- a/travelWebsiteHomePg/css/homePg.css
+++ b/travelWebsiteHomePg/css/homePg.css
@@ -4,7 +4,7 @@ header {
     background-color: #114817;
 }
 
-body {
+.homePg-body {
     font-family: "Josefin Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: weight;
